--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-preset-env": "1.6.1"
   },
   "dependencies": {
-    "kafka-node": "^2.4.1",
+    "promisify-node": "^0.4.0",
     "triple-beam": "^1.1.0",
     "winston-transport": "^3.0.1"
   },
